Fix a css overflow issue

--- a/src/routes/Dashboard/Forms/FormBuilder/components/ElementsListPanel/ElementsListPanel.scss
+++ b/src/routes/Dashboard/Forms/FormBuilder/components/ElementsListPanel/ElementsListPanel.scss
@@ -6,7 +6,7 @@
   margin-left: 3px;
 }
 .elementsListViewInner {
-  overflow: auto;
+  // overflow: auto;
   background-color: $panel-heading-bg-color;
   @include border-radius(4px);
   border: 1px solid $panel-border-color;
@@ -21,7 +21,7 @@
 }
 
 .panelWrapper {
-  overflow: hidden;
+  overflow: visible;
   &:first-child {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -42,6 +42,7 @@
   color: $darkblue;
   background-color: $panel-body-bg-color;
   border-bottom: 1px solid $panel-border-color;
+  @include border-radius(3px 3px 0 0);
   &:hover {
     background-color: darken($panel-body-bg-color, 2%);
   }
@@ -56,7 +57,7 @@
   background-color: $panel-heading-bg-color;
   margin: 0 !important;
   border: none !important;
-  @include border-radius(0);
+  @include border-radius(0 0 3px 3px);
 }
 
 .headerArrow {
